update project list

--- a/_posts/2019-10-10-biped-bot.md
+++ b/_posts/2019-10-10-biped-bot.md
@@ -3,6 +3,7 @@ layout: post
 title:  "A self-balancing biped bot"
 date:   2019-10-10
 excerpt: "Using PID control to make a self-balancing biped bot."
+project: true
 tag:
 - electronics
 - engineering
