oops one more update to biped bot

--- a/_posts/2019-10-10-biped-bot.md
+++ b/_posts/2019-10-10-biped-bot.md
@@ -65,7 +65,7 @@ The main actuators of the robot comprises of 2 DC hobby motors that run from 0-9
 
 ## Program
 ### PID Control
-PID control is a controller system that uses a control loop feedback mechanism to stabilize process variables. The problem we want to solve is simple - we are measuring the tilt of our bot (process variable) and we want to ensure that the bot remains upright (setpoint) as it moves. With relation to a PID controller, we feed our error value (PV - DV) into the controller with a `proportional`, `integral` and `differentiator` gain, and applies the correction to the bot.
+PID control is a controller system that uses a control loop feedback mechanism to stabilize process variables. The problem we want to solve is simple - we are measuring the tilt of our bot (process variable) and we want to ensure that the bot remains upright (setpoint) as it moves. With relation to a PID controller, we feed our error value (`PV - DV`) into the controller with a `proportional`, `integral` and `differentiator` gain, and applies the correction to the bot.
 
 \\[u(t) = K_pe(t)+K_i\int e(t)dt+K_p\frac{de}{dt} \\]
 \\(K_p \\) = proportional gain <br>
@@ -83,7 +83,7 @@ We also considered integral and derivative control, both of which worsened the s
 At the start of the Arduino program, the program records the current position and uses that as the balance point. This can be recalibrated by hitting the reset button. Then, the user must press a push button to activate the balancing program. 
 
 #### Laptop Processing Bluetooth Controller
-We programmed a program on Processing to allow a laptop to function as a bluetooth controller. It displays a three-button GUI for forward movement, backward movement, and no movement. The laptop is first connected via Bluetooth to the HC-05 module, which enables Serial communication between the Arduino and the program. When a button is pressed, the laptop sends the respective signal (<kbd>F</kbd> for forwards/<kbd>B</kbd> for backwards/<kbd>S</kbd> for stop) to the Bluetooth module, which then transmits the character to the Arduino microcontroller. The Arduino interprets each character as a move signal and offsets its current balancing signal by that respective amount. This tilts the bot forwards/backwards, enabling the desired forward or backwards motion. The laptop will continuously transmit the signal corresponding to the last button pressed, which is received by the Arduino to adjust the baseline position. 
+We programmed a program on Processing.js to allow a laptop to function as a bluetooth controller. It displays a three-button GUI for forward movement, backward movement, and no movement. The laptop is first connected via Bluetooth to the HC-05 module, which enables Serial communication between the Arduino and the program. When a button is pressed, the laptop sends the respective signal (<kbd>F</kbd> for forwards/<kbd>B</kbd> for backwards/<kbd>S</kbd> for stop) to the Bluetooth module, which then transmits the character to the Arduino microcontroller. The Arduino interprets each character as a move signal and offsets its current balancing signal by that respective amount. This tilts the bot forwards/backwards, enabling the desired forward or backwards motion. The laptop will continuously transmit the signal corresponding to the last button pressed, which is received by the Arduino to adjust the baseline position. 
 
 #### Arduino bot code
 ~~~ c
@@ -241,7 +241,7 @@ void loop() {
 ~~~
 
 #### Processing code from receiver side (requires bluetooth pairing)
-~~~ java
+~~~ javascript
 //import class to set up serial connection with wiring board
 import processing.serial.*;
 Serial port;
