--- a/_posts/2020-12-02-aoc-day-2.md
+++ b/_posts/2020-12-02-aoc-day-2.md
@@ -7,6 +7,7 @@ tag:
 - coding
 - fun
 comments: false
+feature: /assets/img/posts/aoc2020/aoc2020_cropped.jpeg
 ---
 
 # Day 2
@@ -112,13 +113,8 @@ Seems pretty simple - we can use the count() method to count the frequency of th
 def isValidPassword_p1(password, num1, num2, letter):
     # counting frequency of letter in password
     freq=password.count(letter)
-    
-    if(freq >= int(num1) and freq <= int(num2)):
-        # letter freq in specified range
-        return(True) 
-    else:
-        # letter freq not in specified range
-        return(False)
+    # check if letter in specified range
+    return (freq >= int(num1) and freq <= int(num2))
 
 df['valid_p1']=df.apply(lambda x: isValidPassword_p1(x['password'], x['num1'], x['num2'], x['letter']), axis=1)
 df['valid_p1'].value_counts()
@@ -138,137 +134,51 @@ Ans: `416`
 <center>Tl;dr Letters at the positions of the two numbers should match the given character only <b>once</b>.</center>
 {: .notice}
 
-Alrighty! This one is a bit more of a challenge. I'll take the opportunity to explain a little bit about logic, and logic gates! In this problem, we want only **one** of the letters to match with our specified character. Placed into something called a truth table (where 1: True, 0: False), we have this:
+Alrighty! This one is a bit more of a challenge. I'll take the opportunity to explain a little bit about logic, and logic gates! In this problem, we want only **one** of the letters to match with our specified character. Placed into a truth table (where 1: True, 0: False), we realize we want this outcome:
 
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-pb0m{border-color:inherit;text-align:center;vertical-align:bottom}
-.tg .tg-za14{border-color:inherit;text-align:left;vertical-align:bottom}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-</style>
-<table class="tg">
-<thead>
-  <tr>
-    <th class="tg-pb0m" colspan="2">Input</th>
-    <th class="tg-za14">Output</th>
-    <th class="tg-0pky"></th>
-    <th class="tg-0pky"></th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td class="tg-za14">Left</td>
-    <td class="tg-za14">Right</td>
-    <td class="tg-za14">XOR</td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
-  </tr>
-  <tr>
-    <td class="tg-za14">0</td>
-    <td class="tg-za14">0</td>
-    <td class="tg-za14">0</td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
-  </tr>
-  <tr>
-    <td class="tg-za14">0</td>
-    <td class="tg-za14">1</td>
-    <td class="tg-za14">1</td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
-  </tr>
-  <tr>
-    <td class="tg-za14">1</td>
-    <td class="tg-za14">0</td>
-    <td class="tg-za14">1</td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
-  </tr>
-  <tr>
-    <td class="tg-za14">1</td>
-    <td class="tg-za14">1</td>
-    <td class="tg-za14">0</td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
-  </tr>
-</tbody>
-</table>
 
-It turns out that our little brute force method from before wouldn't be quite as efficient in finding a triplet. Blindly running through every single combination for a triplet with **three** nested for loops is a \\(O(n^3)\\) solution - still alright for our little 200 element sized input, but not great if the Elves suddenly unearthed 5 more piles of accounting tables.
+| Left   | Right | Output |
+|:------:|:-----:|:------:|
+| 1      | 1     | 0      |
+| 1      | 0     | 1      |
+| 0      | 1     | 1      |
+| 0      | 0     | 0      |
+{: rules="groups"}
 
-So, a little bit of thinking later (and some googling, not gonna lie), I chanced upon the <a href="https://www.geeksforgeeks.org/two-pointers-technique/">Two Pointer Technique</a>. The concept is simple: Given a sorted array `A` (sorted in ascending order), having `N` integers, find if there exists any pair of elements (`A[i]`, `A[j]`) such that their sum is equal to `X`. This is a lot smarter, because by finding smart pairs (i.e. comparing the sum we're getting to what we want), we can reduce the time complexity of our solution down to \\(O(n^2)+O(n \log n)\approx O(n^2)\\). Yay for optimization!
+This is a logic gate at its core - specifically, finding the relationship between one or more inputs (Left and Right in our case) and its single output. In our case, this is the equivalent to a XOR gate! There are other logic gates as well, as listed here:
 
-The algorithm is then pretty simple:
-1. First, we hold out one of the triplets, finding our desired sum of the pair.
-2. We use the two pointer technique to efficiently determine whether the sum can be reached.
-3. If not, skip and move on to hold out the next element of the array.
-4. Repeat till our triplet is golden :)
+- `AND`,`&`: Sets each bit to 1 if both bits are 1
+- `OR`,`|`: Sets each bit to 1 if one of two bits is 1
+- **`XOR`, `^`**: Sets each bit to 1 if only one of two bits is 1
+- `NOT`, `~`: Inverts all the bits
+
+Of course, you can also have a combination of these, such as a `XNOR` or `NAND` gate. In real life applicatins, these logic gates are built using  diodes or transistors (a really cool exercise, if you're ever bored!) that essentially act as electronic switches. Of course, anything can be used to make logic gates, from electromagnetic relays[^1], mechanical parts[^2],fluidics[^3] and even optics[^4]!
+
+[^1]: [Pott, V. <i>et al.</i> Mechanical Computing Redux: Relays for Integrated Circuit Applications. <i>Proceedings of the IEEE</i> <b>98</b>, 2076&#x2013;2094 (2010).](https://ieeexplore.ieee.org/abstract/document/5575378)
+[^2]: [Song, Y. <i>et al.</i> Additively manufacturable micro-mechanical logic gates. <i>Nature Communications</i> <b>10</b>, 882 (2019)](https://www.nature.com/articles/s41467-019-08678-0)
+[^3]: [Cheow, L. F., Yobas, L. &amp; Kwong, D.-L. Digital microfluidics: Droplet based logic gates. <i>Appl. Phys. Lett.</i> <b>90</b>, 054107 (2007).](https://doi.org/10.1063/1.2435607)
+[^4]: [Min Zhang, Ling Wang & Peida Ye. All optical XOR logic gates: technologies and experiment demonstrations. <i>IEEE Communications Magazine</i> <b>43</b>, S19-S24 (2005).](https://ieeexplore.ieee.org/abstract/document/1453421)
+
+Thankfully, in python, the XOR gate is easy enough to find - we simply use the bitwise operator `^`. So, we simply pass in our two inputs and viola!
 
 ```python
-import numpy as np
+def isValidPassword_p2(password, num1, num2, letter):
+    # function is essentially an XNOR gate!
+    l1 = (password[int(num1)-1]==letter) # check if 1st character matches
+    l2 = (password[int(num2)-1]==letter) # check if 2nd character matches
+    return (l1^l2)
 
-arr1=np.ndarray.flatten(arr)
-arr1.sort()
-arr1
+df['valid_p2']=df.apply(lambda x: isValidPassword_p2(x['password'], x['num1'], x['num2'], x['letter']), axis=1)
+df['valid_p2'].value_counts()
 ```
 
-    array([  24,  465,  539,  812,  896, 1124, 1149, 1207, 1215, 1217, 1222,
-           1224, 1225, 1232, 1234, 1237, 1240, 1241, 1252, 1270, 1271, 1279,
-           1280, 1284, 1299, 1301, 1304, 1317, 1329, 1330, 1331, 1338, 1343,
-           1360, 1365, 1369, 1371, 1372, 1376, 1379, 1381, 1383, 1384, 1386,
-           1388, 1389, 1394, 1395, 1397, 1400, 1410, 1417, 1419, 1422, 1427,
-           1429, 1434, 1435, 1441, 1442, 1443, 1453, 1457, 1458, 1462, 1469,
-           1470, 1473, 1484, 1487, 1490, 1494, 1502, 1505, 1510, 1515, 1524,
-           1528, 1536, 1539, 1541, 1544, 1546, 1548, 1551, 1554, 1562, 1566,
-           1572, 1582, 1585, 1586, 1589, 1592, 1593, 1597, 1602, 1610, 1615,
-           1616, 1619, 1625, 1626, 1629, 1630, 1631, 1632, 1637, 1638, 1647,
-           1652, 1658, 1675, 1676, 1688, 1691, 1692, 1697, 1700, 1705, 1707,
-           1710, 1711, 1712, 1713, 1720, 1721, 1723, 1736, 1737, 1739, 1741,
-           1744, 1745, 1748, 1751, 1752, 1753, 1754, 1758, 1769, 1778, 1780,
-           1788, 1792, 1794, 1795, 1800, 1804, 1805, 1815, 1817, 1821, 1823,
-           1825, 1829, 1836, 1856, 1857, 1868, 1883, 1884, 1885, 1888, 1892,
-           1896, 1902, 1908, 1911, 1915, 1922, 1932, 1933, 1934, 1941, 1948,
-           1950, 1955, 1956, 1958, 1963, 1966, 1968, 1974, 1975, 1976, 1977,
-           1979, 1980, 1982, 1983, 1988, 1994, 2001, 2003, 2005, 2006, 2008,
-           2009, 2010], dtype=int64)
 
 
-```python
-def getTriplet(arr, sum): 
-    n = len(arr)
-    
-    arr.sort() # sort from lowest to highest, fix first element
-    
-    for i in range(0, n-2): 
-        l = i + 1 # left is one after locked value
-          
-        r = n-1 # right is end of array
-        while (l < r): 
-            if( arr[i] + arr[l] + arr[r] == sum): 
-                print(arr[i], arr[l], arr[r])
-                return arr[i], arr[l], arr[r]
 
-            # if less than sum, move to a larger number (left move)
-            elif (arr[i] + arr[l] + arr[r] < sum): 
-                l += 1
-            # if more than sum, move to a smaller number (right move)
-            else: # A[i] + A[l] + A[r] > sum 
-                r -= 1
-  
-    # rip no triplet shrugs
-    return 0,0,0
+    True     688
+    False    312
+    Name: valid_p2, dtype: int64
 
-ans1,ans2,ans3=getTriplet(arr1,2020)
-print(ans1*ans2*ans3)
-```
+Ans: `688`
 
-    24 539 1457
-    18847752
-
-And there we have it - our golden triplet, `24 539 1457`! Ans: `18847752`
-
-> Thoughts after day 1: given that it's the first day, the problems weren't too difficult - nonetheless, it's a good start to the month, and my problem solving engines have been revved up. Onwards we go!
+> Thoughts after day 2: we love pandas! but also, logic ❤️
