update spotify proj

--- a/_posts/2019-12-18-biped-bot.md
+++ b/_posts/2019-12-18-biped-bot.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "A self-balancing biped bot"
-date:   2019-10-10
+date:   2019-12-18
 excerpt: "Using PID control to make a self-balancing biped bot."
 project: true
 tag:
@@ -10,7 +10,8 @@ tag:
 comments: true
 ---
 
-> A self-balancing biped bot!! How cool is that?? (Robot, Sensors and Actuators final project) <br> Credit: Ruby Liu, <b>Marion Pang<b>
+A self-balancing biped bot!! How cool is that?? (Robot, Sensors and Actuators final project) <br> Credit: Ruby Liu, <b>Marion Pang<b>
+{: .notice}
 
 # Introduction 
 In this project, we develop a simple self-balancing 2-wheeled RC robot, using the accelerometer and PID control to maintain balance while accepting user input for movement. The robot’s movement is controlled using bluetooth by a simple GUI on the Processing software on a computer.
