adding aoc day 3-5!

--- a/_posts/2020-12-02-aoc-day-2.md
+++ b/_posts/2020-12-02-aoc-day-2.md
@@ -133,7 +133,7 @@ Ans: `416`
 <center>Tl;dr Letters at the positions of the two numbers should match the given character only <b>once</b>.</center>
 {: .notice}
 
-Alrighty! This one is a bit more of a challenge. I'll take the opportunity to explain a little bit about logic, and logic gates! In this problem, we want only **one** of the letters to match with our specified character. Placed into a truth table (where 1: True, 0: False), we realize we want this outcome:
+Alrighty! This one is a bit more of a challenge. I'll take the opportunity to explain a little bit about logic, and logic gates! In this problem, we want only **one** of the letters to match with our specified character. Let's arbitrarily define 2 intputs: whether the left character matches, and whether the right character matches. Placed into a truth table (where 1: True, 0: False), we have:
 
 
 | Left   | Right | Output |
@@ -158,7 +158,7 @@ Of course, you can also have a combination of these, such as a `XNOR` or `NAND` 
 [^3]: [Cheow, L. F., Yobas, L. &amp; Kwong, D.-L. Digital microfluidics: Droplet based logic gates. <i>Appl. Phys. Lett.</i> <b>90</b>, 054107 (2007).](https://doi.org/10.1063/1.2435607)
 [^4]: [Min Zhang, Ling Wang & Peida Ye. All optical XOR logic gates: technologies and experiment demonstrations. <i>IEEE Communications Magazine</i> <b>43</b>, S19-S24 (2005).](https://ieeexplore.ieee.org/abstract/document/1453421)
 
-Thankfully, in python, the XOR gate is easy enough to find - we simply use the bitwise operator `^`. So, we simply pass in our two inputs and viola!
+Thankfully, in python, the XOR gate is easy enough to find - we simply use the bitwise operator `^`. So, we pass in our two inputs and voila!
 
 ```python
 def isValidPassword_p2(password, num1, num2, letter):
