--- a/_posts/2020-12-01-aoc2020.md
+++ b/_posts/2020-12-01-aoc2020.md
@@ -2,7 +2,8 @@
 layout: post
 title: "Advent of Code 2020"
 date: 2020-12-01
-excerpt: "Coding exercises for Christmas!."
+excerpt: "Coding exercises for Christmas!"
+project: true
 tag: 
 - coding
 - fun
