updating day6 post

--- a/_posts/2020-12-01-aoc-day-1.md
+++ b/_posts/2020-12-01-aoc-day-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Advent of Code 2020!
+title: Advent of Code 2020! (Day 1)
 date: 2020-12-01
 excerpt: "An old engineer attempts to scrub off the rust on her high school coding days."
 tag: 
