--- a/_posts/2019-12-18-biped-bot.md
+++ b/_posts/2019-12-18-biped-bot.md
@@ -4,6 +4,7 @@ title:  "A self-balancing biped bot"
 date:   2019-12-18
 excerpt: "Using PID control to make a self-balancing biped bot."
 project: true
+hidden: true
 tag:
 - electronics
 - engineering
