--- a/_posts/2020-12-01-aoc2020.md
+++ b/_posts/2020-12-01-aoc2020.md
@@ -8,6 +8,7 @@ tag:
 - coding
 - fun
 comments: false
+hidden: true
 ---
 
 What better way to celebrate the leadup to Christmas than some coding exercises? Jk, but I thought it'll be good practice to brush up on some rusty coding skills - so here goes!
